[package]
name = "evm_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evm_parser"
path = "src/main.rs"

[dependencies]
log = "0.4.22"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0"
alloy-rlp = { version = "0.3.11" }
alloy-consensus = { version = "0.13.0" }
alloy-primitives = { version = "0.8.25" }
alloy-sol-types = { version = "0.8.25" }
alloy-json-abi = { version = "0.8.25"}
