[package]
name = "solana_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
solana-sdk = { version = "2.1.0", default-features = false }
solana-program = { version = "2.1.0", default-features = false }
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0"
solana_idl = "0.2.0"
serde = "1.0.219"
sha2 = { version = "0.10.8", default-features = false }
byteorder = "1.5.0"
bs58 = "0.5.1"
heck = "0.5.0"
